[gd_scene load_steps=5 format=3 uid="uid://fuva5432gtkv"]

[ext_resource type="Script" uid="uid://dii4uukc3oe38" path="res://assets/ui/HoverableButton.gd" id="1_g2x5p"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a12hr"]
bg_color = Color(0.223529, 0.223529, 0.223529, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
shadow_size = 1
shadow_offset = Vector2(0, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g2x5p"]
bg_color = Color(0.254902, 0.254902, 0.254902, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
shadow_size = 1
shadow_offset = Vector2(0, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u3shm"]
bg_color = Color(0.196078, 0.196078, 0.196078, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
shadow_size = 1
shadow_offset = Vector2(0, 3)

[node name="HoverableButton" type="Button"]
custom_minimum_size = Vector2(150, 30)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1130.0
offset_bottom = -690.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme_override_colors/font_color = Color(0.784314, 0.784314, 0.784314, 1)
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_a12hr")
theme_override_styles/hover = SubResource("StyleBoxFlat_g2x5p")
theme_override_styles/normal = SubResource("StyleBoxFlat_u3shm")
script = ExtResource("1_g2x5p")

[node name="ButtonSprite" type="Sprite2D" parent="."]
texture_filter = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
